CKAD Mock Practice/networkpolicies/server.yaml
apiVersion: v1
kind: Pod
metadata:
 name: server-poc
 namespace: dev-environment
 labels:
  app: server
spec:
 containers:
 - name: webserver
   image: busybox
   command: ["sh", "-c", "while true; do wget -qO- http://frontend-pod.dev-environment.svc.cluster.local || echo 'Failed to reach frontend' >> /var/log/webserver.log; sleep 5; done"]
   volumeMounts:
   - name: log-volume
     mountPath: /var/log
   resources:
    limits:
     memory: "250Mi"
     cpu: "250m"
 volumes:
 - name: log-volume
   emptyDir: {}
