CKAD Mock Practice/networkpolicies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: ingress-frontend
 namespace: dev-environment
spec:
 podSelector:
  matchLabels:
   app: frontend
 policyTypes:
 - Ingress
 ingress:
 - from:
   - podSelector:
      matchLabels:
       app: server
